ubiquity (2.5.15) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Ignore "Not Available" strings in dmidecode output (LP: #711968).

  [ Jonathan Riddell ]
  * frontend/kde_ui.py use new KDE wallpaper

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Feb 2011 15:20:03 +0000

ubiquity (2.5.14) natty; urgency=low

  * Append to the timezone model using the correct types (LP: #702898).
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 02 Feb 2011 10:24:41 +0000

ubiquity (2.5.13) natty; urgency=low

  [ Jonathan Riddell ]
  * Fix layout issues in stepPartMan.ui and stepLanguage.ui LP: #705915

  [ Evan Dandrea ]
  * Show a Shutdown Now button (LP: #690726). Thanks Cyrus Lien!
  * Only show the shutdown button if ubiquity/show_shutdown_button was
    preseeded true.
  * Don't show a resize grip on the panel.

  [ Colin Watson ]
  * Automatic update of included source packages: base-installer
    1.115ubuntu1, choose-mirror 2.37ubuntu1, partman-btrfs 5ubuntu2,
    partman-ext3 62ubuntu1, yaboot-installer 1.1.19ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 Feb 2011 14:42:55 +0000

ubiquity (2.5.12) natty; urgency=low

  [ Mario Limonciello ]
  * Fix oem-config-remove-gtk for changes in AptClient's commit_packages.
    (LP: #708722)

  [ Evan Dandrea ]
  * Update translations from Launchpad.
  * If a session indicator gconf key starts unset, make sure it ends
    that way (LP: #684052).
  * Fix mistake in the cleanup branch merge that broke translations
    (LP: #691671).
  * pc105.tree is included in console-setup now, which speeds up
    ubiquity builds.
  * Detect hostname collisions (LP: #634187).

  [ Colin Watson ]
  * Automatic update of included source packages: clock-setup 0.106ubuntu1,
    console-setup 1.57ubuntu5, partman-basicfilesystems 69ubuntu1,
    partman-efi 23ubuntu1, partman-partitioning 79ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 28 Jan 2011 15:06:19 +0000

ubiquity (2.5.11) natty; urgency=low
